tests/neg-custom-args/captures/dcs-tvar.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/dcs-tvar.scala:6:2 ---------------------------------------
6 |  () => runOps(xs) // error
  |  ^^^^^^^^^^^^^^^^
  |  Found:    () ->{xs*} Unit
  |  Required: () -> Unit
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/dcs-tvar.scala:9:2 ---------------------------------------
9 |  () => runOps(xs) // error
  |  ^^^^^^^^^^^^^^^^
  |  Found:    () ->{xs*} Unit
  |  Required: () -> Unit
  |
  | longer explanation available when compiling with `-explain`
